2008-01-22  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h [!offsetof] (offsetof): New compatibilty macro.
	* lib/parsedump.h (PKGIFPOFF): Use offsetof instead of ad-hoc
	calculation.
	(FILEFOFF): Likewise.
	(struct fieldinfo): Change integer member type to size_t.
	* lib/tarfn.c (TarChecksumOffset): Use offsetof instead of ad-hoc
	calculation.

2008-01-22  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_HEADERS): Check for 'stddef.h'.

2008-01-21  Colin Watson  <cjwatson@debian.org>

	* dselect/pkgkeys.cc (packagelist_korgbindings): Add 'C'.
	(packagelist_kinterps): Add 'revertinstalled'.
	* dselect/bindings.cc (keybindings::descriptions): Likewise.
	* dselect/pkglist.h (class packagelist): Add kd_revertinstalled.
	* dselect/pkgcmds.cc (packagelist::kd_revertinstalled): New method.
	* man/dselect.1: Document new 'C' keybinding.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (getfi): Use m_malloc instead of malloc.
	(do_build): Likewise.
	* dpkg-deb/extract.c (extracthalf): Likewise.
	* lib/mlib.c (buffer_write): Likewise.
	(buffer_copy): Likewise.
	* lib/myopt.c (loadcfgfile): Likewise.
	* lib/parse.c (parsedb): Likewise.
	* lib/showpkg.c (alloclstitem): Likewise.
	(parsefield): Likewise.
	(parsestring): Likewise.
	* lib/tarfn.c (StoC): Likewise.
	(TarExtractor): Likewise.
	* src/archives.c (try_deconfigure_can): Likewise.
	* src/main.c (execbackend): Likewise.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* lib/mlib.c (m_strdup): New function.
	* lib/dpkg.h (m_strdup): New declaration.
	* lib/tarfn.c: Include <dpkg.h>.
	(TarExtractor): Use m_strdup instead of strdup.
	* lib/database.c (findpackage): Likewise.
	* lib/myopt.c (myfileopt): Likewise.
	* dpkg-deb/build.c (getfi): Likewise.
	* src/configure.c (md5hash): Likewise.
	* src/help.c (vbuildarglist): Likewis.
	* src/main.c (execbackend): Likewise.
	(commandfd): Likewise.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.17~.
