@@ -1,5 +1,9 @@
 2008-01-22  Guillem Jover  <guillem@debian.org>
 
+	* lib/vercmp.c [0] (verrevcmp): Remove dead code.
+
+2008-01-22  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h [!offsetof] (offsetof): New compatibilty macro.
 	* lib/parsedump.h (PKGIFPOFF): Use offsetof instead of ad-hoc
 	calculation.
